--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="zh-Hans">
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="NekoCraft 我的世界1.16.5正版公益服务器">
+  <meta name="description" content="2022届毕业忠德Minecraft地图网站">
   <meta name="keywords" content="NekoCraft,nekocraft,MincraftServer,服务器,我的世界服务器,我的世界,Minecraft,MC,公益服务器,正版服务器">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="renderer" content="webkit">
   <meta http-equiv="Cache-Control" content="no-siteapp" />
   <meta name="theme-color" content="#181818">
-  <title data-t="indexTitle">NekoCraft | 一个和谐的我的世界服务器</title>
+  <title data-t="indexTitle">忠德学校 | 几个22届毕业生的作品</title>
   <link rel="icon" rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico">
   <meta name="mobile-web-app-capable" content="yes">
   <link rel="icon" sizes="192x192" href="assets/logo.png">
@@ -28,14 +28,14 @@
   <main>
     <header>
       <a href="/"><img alt="logo" class="logo" src="assets/logo.png"></a>
-      <span>NekoCraft</span>
+      <span>ZDSchool</span>
     </header>
     <section id="first" bp="grid vertical-center">
       <div bp="12">
         <img alt="logo" class="shake-slow logo" src="assets/logo.png">
-        <h1>NekoCraft</h1>
-        <h3>公益 | 正版 | 原版生存 | 死亡不掉</h3>
-        <p>一个和谐友爱的 MineCraft 服务器</p>
+        <h1>ZDSchool</h1>
+        <h3>2022届忠德毕业生建造的忠德学校</h3>
+        <p>（肝劲十足）</p>
         <p></p>
         <div class="buttons">
           <a role="button" class="btn btn-primary" href="https://jq.qq.com/?_wv=1027&k=5mmRYXm" target="_blank">加入Q群</a><a role="button" class="btn btn-secondary" href="https://user.neko-craft.com/#/about" target="_blank">服务器规定</a>
