--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <p>（肝劲十足）</p>
         <p></p>
         <div class="buttons">
-          <a role="button" class="btn btn-primary" href="https://jq.qq.com/?_wv=1027&k=5mmRYXm" target="_blank">加入Q群</a><a role="button" class="btn btn-secondary" href="https://user.neko-craft.com/#/about" target="_blank">服务器规定</a>
+          <a role="button" class="btn btn-primary" href="https://file.kjchmc.cn/Minecraft/school/忠德资料/" target="_blank">下载地图&材质包</a><a role="button" class="btn btn-secondary" href="https://user.neko-craft.com/#/about" target="_blank">观看毕业视频</a>
         </div>
       </div>
     </section>
