--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div bp="12">
         <img alt="logo" class="shake-slow logo" src="assets/logo.png">
         <h1>ZDSchool</h1>
-        <h3>2022届忠德毕业生建造的忠德学校</h3>
+        <h3>2022届毕业生建造的忠德学校</h3>
         <p>（肝劲十足）</p>
         <p></p>
         <div class="buttons">
@@ -156,6 +156,6 @@
     </footer>
   </main>
   <script src="//unpkg.com/swiper/swiper-bundle.min.js"></script>
-  <script src="index.js"></script>
+  <!--<script src="index.js"></script>-->
 </body>
 </html>
