--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <a href="/"><img alt="logo" class="logo" src="assets/logo.png"></a>
       <span>ZDSchool</span>
     </header>
-    <section id="first" bp="grid vertical-center">
+    <section id="first" bp="grid vertical-center" style="background-image: ('./assets/backgrounds/2.jpg')">
       <div bp="12">
         <img alt="logo" class="shake-slow logo" src="assets/logo.png">
         <h1>ZDSchool</h1>
