--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <a href="/"><img alt="logo" class="logo" src="assets/logo.png"></a>
       <span>ZDSchool</span>
     </header>
-    <section id="first" bp="grid vertical-center" style="background-image: ('./assets/backgrounds/2.jpg')">
+    <section id="first" bp="grid vertical-center" style="background-image: url(./assets/backgrounds/2.jpg);">
       <div bp="12">
         <img alt="logo" class="shake-slow logo" src="assets/logo.png">
         <h1>ZDSchool</h1>
@@ -38,7 +38,7 @@
         <p>（肝劲十足）</p>
         <p></p>
         <div class="buttons">
-          <a role="button" class="btn btn-primary" href="https://file.kjchmc.cn/Minecraft/school/忠德资料/" target="_blank">下载地图&材质包</a><a role="button" class="btn btn-secondary" href="https://user.neko-craft.com/#/about" target="_blank">观看毕业视频</a>
+          <a role="button" class="btn btn-primary" href="https://file.kjchmc.cn/Minecraft/school/忠德资料/" target="_blank">下载地图&材质包</a><a role="button" class="btn btn-secondary" href="./video.html" target="_blank">观看毕业视频</a>
         </div>
       </div>
     </section>
