--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
         </div>
       </section>
       <h1>更多图片</h1>
-      <section id="more">
+      <!--<section id="more">
         <div class="swiper-container">
           <div class="swiper-wrapper" id="slide"></div>
           <div class="swiper-pagination swiper-pagination-white"></div>
           <div class="swiper-button-next swiper-button-white"></div>
           <div class="swiper-button-prev swiper-button-white"></div>
         </div>
-      </section>
+      </section>-->
     </section>
     <section id="third" bp="grid vertical-center">
       <div bp="12">我们的优势</div>
