--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <link type="text/css" rel="stylesheet" href="//unpkg.com/swiper/swiper-bundle.min.css">
   <link type="text/css" rel="stylesheet" href="//cdn.jsdelivr.net/npm/blueprint-css@3.1.1/dist/blueprint.min.css" />
   <link type="text/css" rel="styleSheet" href="css/shake.css" />
+  <link type="text/css" rel="stylesheet" href="/css/scrollbar.css" />
   <link type="text/css" rel="styleSheet" href="css/main.less" />
 </head>
 <body>
