--- a/video.html
+++ b/video.html
@@ -7,9 +7,9 @@
     <title>忠德2022届毕业留念</title>
 </head>
 <body>
-    <script src="//unpkg.byted-static.com/xgplayer/2.31.2/browser/simple_player.js" type="text/javascript"></script>
-    <script src="//unpkg.byted-static.com/xgplayer/2.31.2/browser/controls/volume.js" type="text/javascript"></script>
-    <script src="//unpkg.byted-static.com/xgplayer/2.31.2/browser/controls/playbackRate.js" type="text/javascript"></script>
+    <script src="//unpkg.com/xgplayer@2.31.6/dist/index.js" type="text/javascript"></script>
+    <script src="//unpkg.com/xgplayer@2.31.6/dist/simple_player.js" type="text/javascript"></script>
+    <script src="//unpkg.com/xgplayer@2.31.6/dist/controls/playbackRate.js" type="text/javascript"></script>
 
     <div id="video"></div>
 
