--- a/video.html
+++ b/video.html
@@ -26,7 +26,7 @@
                 window.PlayerControls.volume,
                 window.PlayerControls.playbackRate
             ],
-            playbackRate: [0.5, 0.75, 1, 1.5, 2, 4] //传入倍速可选数组
+            playbackRate: [0.5, 0.75, 1, 1.5, 2] //传入倍速可选数组
         });
     </script>
 </body>
