--- a/video.html
+++ b/video.html
@@ -20,8 +20,7 @@
             poster: "/assets/poster.jpg",
             autoplay: false,
             playsinline: true,
-            height: window.innerHeight,
-            width: window.innerWidth,
+            fitVideoSize: 'auto',
             controlPlugins: [
                 window.PlayerControls.volume,
                 window.PlayerControls.playbackRate
