--- a/video.html
+++ b/video.html
@@ -14,7 +14,7 @@
     <div id="video"></div>
 
     <script>
-        let player = new Player({
+        new Player({
             id: 'video',
             url: 'https://file.kjchmc.cn/2022.mp4',
             poster: "/assets/poster.jpg",
