--- a/video.html
+++ b/video.html
@@ -13,7 +13,7 @@
     <div id="video"></div>
 
     <script>
-        new Player({
+        let player = new Player({
             id: 'video',
             url: 'https://file.kjchmc.cn/2022.mp4',
             poster: '/assets/poster.jpg',
