--- a/video.html
+++ b/video.html
@@ -1,25 +1,42 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,minimal-ui">
+    <meta name="referrer" content="no-referrer">
     <title>忠德2022届毕业留念</title>
-</head>
-<body>
-    <script src="//unpkg.com/xgplayer@2.31.6/dist/index.js" type="text/javascript"></script>
-    <script src="//unpkg.com/xgplayer@2.31.6/dist/simple_player.js" type="text/javascript"></script>
-
-    <div id="video"></div>
-
-    <script>
-        let player = new Player({
-            id: 'video',
-            url: 'https://file.kjchmc.cn/2022.mp4',
-            poster: '/assets/poster.jpg',
-            fitVideoSize: 'auto'
-        });
-    </script>
-</body>
+    <style type="text/css">
+      html, body {width:100%;height:100%;margin:auto;overflow: hidden;}
+    </style>
+  </head>
+  <body>
+    <div id="mse"></div>
+    <script src="//unpkg.byted-static.com/xgplayer/2.31.6/browser/index.js" charset="utf-8"></script>
+      <script>
+      let player = new Player({
+		"id": "mse",
+		"url": "https://file.kjchmc.cn/Minecraft/school/2022%E5%B1%8A%E5%88%9D%E4%B8%89%E6%AF%95%E4%B8%9A%E8%A7%86%E9%A2%91%E6%88%90%E7%A8%BF.mp4",
+		"playsinline": true,
+		"whitelist": [
+				""
+		],
+		"width": null,
+		"height": null,
+		"poster": "./assets/poster.jpg",
+		"fluid": false,
+		"playbackRate": [
+				0.5,
+				1,
+				1.5,
+				2
+		],
+		"danmu": [],
+		"screenShot": true,
+		"download": true,
+		"keyShortcut": "off",
+		"closeVideoClick": false
+      });
+      
+          </script>
+  </body>
 </html>
-
