--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <section id="second">
       <section bp="grid vertical-center">
         <div bp="10 offset-2 5@md offset-2@md">
-          <iframe src="//player.bilibili.com/player.html?aid=204181396&bvid=BV1Th411y7TB&cid=297720995&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+          <iframe src="./video.html" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
         </div>
         <div class="container right" bp="4@md offset-8@md 12 offset-1">
           <h1>新年活动: 焰火之夜</h1>
