--- a/video.html
+++ b/video.html
@@ -22,7 +22,7 @@
 		],
 		"width": null,
 		"height": null,
-		"poster": "./assets/poster.jpg",
+		"poster": "assets/poster.jpg",
 		"fluid": false,
 		"playbackRate": [
 				0.5,
