--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       ],
       "width": null,
       "height": null,
-      "poster": "assets/poster.jpg",
+      "poster": "https://file.kjchmc.cn/Minecraft/school/%E5%AD%A6%E6%A0%A1%E7%85%A7%E7%89%87/poster.jpg",
       "fluid": false,
       "playbackRate": [
         0.5,
@@ -176,11 +176,7 @@
         1.5,
         2
       ],
-      "danmu": [],
-      "screenShot": true,
       "download": true,
-      "keyShortcut": "off",
-      "closeVideoClick": false
     });
   </script>
   <!--<script src="index.js"></script>-->
