--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
     <section id="second">
       <section bp="grid vertical-center">
         <div bp="10 offset-2 5@md offset-2@md">
-          <div id="mse"></div>
+          <!--<div id="mse"></div>-->
+          <iframe src="./video.html" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
         </div>
         <div class="container right" bp="4@md offset-8@md 12 offset-1">
           <h1>新年活动: 焰火之夜</h1>
