--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <h1>服务器管理组</h1>
       <div>
         <section>
-          <img class="img" src="https://minotar.net/helm/KagurazakaSatori/100.png">
+          <img class="img" src="https://minotar.net/helm/kjch666/100.png">
           <h3>KagurazakaSatori</h3>
           <p>前服主</p>
         </section>
