--- a/index.html
+++ b/index.html
@@ -180,6 +180,6 @@
       "download": true,
     });
   </script>
-  <!--<script src="index.js"></script>-->
+  <script src="index.js"></script>
 </body>
 </html>
