--- a/imglist.html
+++ b/imglist.html
@@ -104,6 +104,11 @@
           nextEl: ".swiper-button-next",
           prevEl: ".swiper-button-prev",
         },
+        autoplay: {
+          delay: 3000,
+          stopOnLastSlide: false,
+          disableOnInteraction: true,
+          },
       });
     </script>
   </body>
