--- a/imglist.html
+++ b/imglist.html
@@ -71,16 +71,32 @@
     <div class="swiper mySwiper">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
-            <img src='https://file.kjchmc.cn/Minecraft/school/%E5%BF%A0%E5%BE%B7%E8%B5%84%E6%96%99/%E6%88%AA%E5%9B%BE/1.jpg' />
+            <img src='https://file.kjchmc.cn/Minecraft/school/忠德资料/截图/1.jpg' />
         </div>
-        <div class="swiper-slide">Slide 2</div>
-        <div class="swiper-slide">Slide 3</div>
-        <div class="swiper-slide">Slide 4</div>
-        <div class="swiper-slide">Slide 5</div>
-        <div class="swiper-slide">Slide 6</div>
-        <div class="swiper-slide">Slide 7</div>
-        <div class="swiper-slide">Slide 8</div>
-        <div class="swiper-slide">Slide 9</div>
+        <div class="swiper-slide">
+            <img src='https://file.kjchmc.cn/Minecraft/school/忠德资料/截图/2.jpg' />
+        </div>
+        <div class="swiper-slide">
+            <img src='https://file.kjchmc.cn/Minecraft/school/忠德资料/截图/3.jpg' />
+        </div>
+        <div class="swiper-slide">
+            <img src='https://file.kjchmc.cn/Minecraft/school/忠德资料/截图/4.jpg' />
+        </div>
+        <div class="swiper-slide">
+            <img src='https://file.kjchmc.cn/Minecraft/school/忠德资料/截图/5.jpg' />
+        </div>
+        <div class="swiper-slide">
+            <img src='https://file.kjchmc.cn/Minecraft/school/忠德资料/截图/6.jpg' />
+        </div>
+        <div class="swiper-slide">
+            <img src='https://file.kjchmc.cn/Minecraft/school/忠德资料/截图/7.jpg' />
+        </div>
+        <div class="swiper-slide">
+            <img src='https://file.kjchmc.cn/Minecraft/school/忠德资料/截图/8.jpg' />
+        </div>
+        <div class="swiper-slide">
+            <img src='https://file.kjchmc.cn/Minecraft/school/忠德资料/截图/9.jpg' />
+        </div>
       </div>
       <div class="swiper-button-next"></div>
       <div class="swiper-button-prev"></div>
