--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <p>（肝劲十足）</p>
         <p></p>
         <div class="buttons">
-          <a role="button" class="btn btn-primary" href="https://file.kjchmc.cn/Minecraft/school/忠德资料/" target="_blank">下载地图&材质包</a><a role="button" class="btn btn-secondary" href="./video.html">观看毕业视频</a>
+          <a role="button" class="btn btn-primary" href="https://file.kjchmc.cn/Minecraft/school/忠德资料/" target="_blank">下载地图&材质包</a><a role="button" class="btn btn-secondary" href="http://mc.kjchmc.cn:8123/">查看服务器卫星地图</a>
         </div>
       </div>
     </section>
