--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
         </div>
       </section>
       <h1>更多图片</h1>
+      <div class="more-img">
+        <img src="https://file.kjchmc.cn/Minecraft/school/忠德资料/截图/1.jpg">
+        <img src="https://file.kjchmc.cn/Minecraft/school/忠德资料/截图/2.jpg">
+        <img src="https://file.kjchmc.cn/Minecraft/school/忠德资料/截图/3.jpg">
+      </div>
       <iframe src="./imglist.html" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
       <!--<section id="more">
               <div class="swiper-container">
