--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <link type="text/css" rel="styleSheet" href="css/shake.css" />
   <link type="text/css" rel="stylesheet" href="/css/scrollbar.css" />
   <link type="text/css" rel="styleSheet" href="css/main.less" />
+  <script src="https://use.fontawesome.com/b29e10a0ef.js"></script>
 </head>
 <body>
   <main>
@@ -50,12 +51,12 @@
           <iframe src="./video.html" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
         </div>
         <div class="container right" bp="4@md offset-8@md 12 offset-1">
-          <h1>新年活动: 焰火之夜</h1>
-          <p>夜幕沉寂之时, 焰火冉冉升起.</p>
-          <p>告别旧年迷离, 沉醉今夜绚丽.</p>
-          <p>这个除夕, 大家欢闹嬉戏.</p>
+          <h1>毕业纪念</h1>
+          <p>时光飞逝, 匆匆三年.</p>
+          <p>告别初中, 迎接高中.</p>
+          <p>2022.7.9</p>
           <p>这段记忆, 注定难以舍弃.</p>
-          <p class="small">(点击左侧以播放视频)</p>
+          <p class="small">(点击<i class="fa-regular fa-circle-play"></i>播放视频)</p>
         </div>
       </section>
       <section bp="grid vertical-center">
@@ -63,10 +64,11 @@
           <img class="img" src="assets/members.jpg">
         </div>
         <div class="container" bp="first@md 12 5@md offset-2@md">
-          <h1>这是一个温馨的大家庭</h1>
-          <p>我们, 或许不够完美.</p>
-          <p>但是, 却充满着欢笑与喜悦.</p>
-          <p class="small">(至今已有 2k+ 小伙伴加入了服务器)</p>
+          <h1>我们毕业啦</h1>
+          <p>这是一个温馨的大家庭.</p>
+          <p>因为有了我们</p>
+          <p>这里, 充满着欢笑与喜悦.</p>
+          <p class="small">(不要忘记彼此！)</p>
         </div>
       </section>
       <h1>更多图片</h1>
@@ -74,8 +76,14 @@
         <img src="https://file.kjchmc.cn/Minecraft/school/忠德资料/截图/1.jpg">
         <img src="https://file.kjchmc.cn/Minecraft/school/忠德资料/截图/2.jpg">
         <img src="https://file.kjchmc.cn/Minecraft/school/忠德资料/截图/3.jpg">
+        <img src="https://file.kjchmc.cn/Minecraft/school/忠德资料/截图/4.jpg">
+        <img src="https://file.kjchmc.cn/Minecraft/school/忠德资料/截图/5.jpg">
+        <img src="https://file.kjchmc.cn/Minecraft/school/忠德资料/截图/6.jpg">
+        <img src="https://file.kjchmc.cn/Minecraft/school/忠德资料/截图/7.jpg">
+        <img src="https://file.kjchmc.cn/Minecraft/school/忠德资料/截图/8.jpg">
+        <img src="https://file.kjchmc.cn/Minecraft/school/忠德资料/截图/9.jpg">
       </div>
-      <iframe src="./imglist.html" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+      <!--<iframe src="./imglist.html" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>-->
       <!--<section id="more">
               <div class="swiper-container">
                 <div class="swiper-wrapper" id="slide"></div>
