--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <link type="text/css" rel="styleSheet" href="css/shake.css" />
   <link type="text/css" rel="stylesheet" href="/css/scrollbar.css" />
   <link type="text/css" rel="styleSheet" href="css/main.less" />
-  <script src="https://use.fontawesome.com/b29e10a0ef.js"></script>
+  <script src="https://use.fontawesome.com/abdb21b990.js"></script>
 </head>
 <body>
   <main>
@@ -56,7 +56,7 @@
           <p>告别初中, 迎接高中.</p>
           <p>2019.9 - 2022.7</p>
           <p>这段记忆, 注定难以舍弃.</p>
-          <p class="small">(点击<i class="fa-regular fa-circle-play"></i>播放视频)</p>
+          <p class="small">(点击</p><i class="fa-regular fa-circle-play"></i><p class="small">播放视频)</p>
         </div>
       </section>
       <section bp="grid vertical-center">
