--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <link type="text/css" rel="stylesheet" href="/css/scrollbar.css" />
   <link type="text/css" rel="styleSheet" href="css/main.less" />
   <script src="https://use.fontawesome.com/abdb21b990.js"></script>
+  <script src="./js/fontawesome.all.js"></script>
 </head>
 <body>
   <main>
