--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
   <link type="text/css" rel="styleSheet" href="css/shake.css" />
   <link type="text/css" rel="stylesheet" href="/css/scrollbar.css" />
   <link type="text/css" rel="styleSheet" href="css/main.less" />
-  <script src="https://use.fontawesome.com/abdb21b990.js"></script>
-  <script src="./js/fontawesome.all.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/fontawesome.min.css" integrity="sha384-zIaWifL2YFF1qaDiAo0JFgsmasocJ/rqu7LKYH8CoBEXqGbb9eO+Xi3s6fQhgFWM" crossorigin="anonymous">
 </head>
 <body>
   <main>
