--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <p>告别初中, 迎接高中.</p>
           <p>2019.9 - 2022.7</p>
           <p>这段记忆, 注定难以舍弃.</p>
-          <p class="small">(点击</p><i class="fa-solid fa-circle-play"></i><p class="small">播放视频)</p>
+          <a class="small">(点击</a> <i class="fa-solid fa-circle-play"></i> <a class="small">播放视频)</a>
         </div>
       </section>
       <section bp="grid vertical-center">
