--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <p>告别初中, 迎接高中.</p>
           <p>2019.9 - 2022.7</p>
           <p>这段记忆, 注定难以舍弃.</p>
-          <a class="small">(点击</a> <i class="fa-solid fa-circle-play"></i> <a class="small">播放视频)</a>
+          <a class="small">(点击图片</a> <i class="fa-solid fa-circle-play"></i> <a class="small">播放视频)</a>
         </div>
       </section>
       <section bp="grid vertical-center">
@@ -112,47 +112,32 @@
       </section>
     </section>
     <section id="forth">
-      <h1>服务器管理组</h1>
+      <h1>建筑成员</h1>
       <div>
         <section>
-          <img class="img" src="https://minotar.net/helm/kjch666/100.png">
-          <h3>KagurazakaSatori</h3>
-          <p>前服主</p>
+          <img class="img" src="/assets/members/kjch666.png"><!--https://minotar.net/helm/kjch666/100.png-->-->
+          <h3>kjch况佳城</h3>
+          <p>kjch666</p>
         </section>
         <section>
-          <img class="img" src="https://minotar.net/helm/ShirasawaSama/100.png">
-          <h3>ShirasawaSama</h3>
-          <p>现服主</p>
+          <img class="img" src="/assets/members/H2O2R.png">
+          <h3>H2O2R</h3>
+          <p>蒋昊</p>
         </section>
         <section>
-          <img class="img" src="https://minotar.net/helm/BBleae/100.png">
-          <h3>BBleae</h3>
-          <p>管理员</p>
+          <img class="img" src="/assets/members/xhj.png">
+          <h3>董洪宇</h3>
+          <p>xhj</p>
         </section>
         <section>
-          <img class="img" src="https://minotar.net/helm/tobell/100.png">
-          <h3>tobell</h3>
-          <p>管理员</p>
+          <img class="img" src="/assets/members/lh.png">
+          <h3>李辉</h3>
+          <p>woshidas**bi</p>
         </section>
         <section>
-          <img class="img" src="https://minotar.net/helm/Flandern_S/100.png">
-          <h3>Flandern_S</h3>
-          <p>管理员</p>
-        </section>
-        <section>
-          <img class="img" src="https://minotar.net/helm/Lulu_Fengling/100.png">
-          <h3>Lulu_Fengling</h3>
-          <p>管理员</p>
-        </section>
-        <section>
-          <img class="img" src="https://minotar.net/helm/RukiaOvO/100.png">
-          <h3>RukiaOvO</h3>
-          <p>管理员</p>
-        </section>
-        <section>
-          <img class="img" src="https://minotar.net/helm/YtonE/100.png">
-          <h3>YtonE</h3>
-          <p>管理员</p>
+          <img class="img" src="/assets/members/test.png">
+          <h3>老况的摄像机</h3>
+          <p>test</p>
         </section>
       </div>
       <h1>联系我们</h1>
