--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <h1>建筑成员</h1>
       <div>
         <section>
-          <img class="img" src="/assets/members/kjch666.png"><!--https://minotar.net/helm/kjch666/100.png-->-->
+          <img class="img" src="/assets/members/kjch666.png"><!--https://minotar.net/helm/kjch666/100.png-->
           <h3>kjch况佳城</h3>
           <p>kjch666</p>
         </section>
