--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               </div>
             </section>-->
     </section>
-    <section id="third" bp="grid vertical-center">
+    <!--<section id="third" bp="grid vertical-center">
       <div bp="12">我们的优势</div>
       <section bp="4@md 12">
         <img src="assets/minecraft.png">
@@ -110,7 +110,7 @@
         <p>已通过 MCBBS 公益服务器审核</p>
         <p>只为打造一个良好的游戏环境和社区</p>
       </section>
-    </section>
+    </section>-->
     <section id="forth">
       <h1>建筑成员</h1>
       <div>
@@ -140,23 +140,25 @@
           <p>test</p>
         </section>
       </div>
-      <h1>联系我们</h1>
+      <h1>联系我</h1>
       <ul>
-        <li>QQ 群: <a href="https://jq.qq.com/?_wv=1027&k=5mmRYXm" target="_blank">7923309</a></li>
-        <li>Telegram 群组: <a href="https://t.me/NekoCraft" target="_blank">@NekoCraft</a></li>
-        <li><a href="https://www.mcbbs.net/thread-1156058-1-1.html" target="_blank">MCBBS 宣传贴</a></li>
-        <li><a href="https://user.neko-craft.com" target="_blank">用户中心</a></li>
-        <li><a href="https://user.neko-craft.com/#/maps" target="_blank">网页地图</a></li>
-        <li><a href="https://user.neko-craft.com/#/about" target="_blank">服务器规定</a></li>
-        <li><a href="https://github.com/neko-craft" target="_blank">Github</a></li>
+        <li>微信: kjch666FFF</li>
+        <li>QQ: <a href="https://wpa.qq.com/msgrd?v=3&uin=1834423612&site=qqq&menu=yes" target="_blank">1834423612</a></li>
+        <li><a href="https://www.kjchmc.cn/" target="_blank">kjch况佳城的主页</a></li>
+        <li><a href="https://file.kjchmc.cn/" target="_blank">老况的文件库</a></li>
+        <li><a href="https://github.com/1834423612" target="_blank">Github</a></li>
       </ul>
     </section>
     <footer>
-      <a href="http://www.beian.miit.gov.cn" target="_blank">桂ICP备20005600号-1</a>
-      <span class="copy">Copyright &copy; 2021 Apisium All rights reserved.</span>
+      <a href="http://www.beian.miit.gov.cn" target="_blank">冀ICP备19023170号</a>
+      <a target="_blank" rel="noopener external nofollow noreferrer" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=11011202001885">
+        <span class="icp" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;">
+          <img src="http://www.beian.gov.cn/img/ghs.png" style="float:left;"/>京公网安备11011202001885号</span></a>
+      <span class="copy">Copyright &copy; 2022 kjch况佳城 All rights reserved.</span>
     </footer>
   </main>
   <script src="//unpkg.com/swiper/swiper-bundle.min.js"></script>
+  <!--视频-->
   <script src="//unpkg.byted-static.com/xgplayer/2.31.6/browser/index.js" charset="utf-8"></script>
   <script>
     let player = new Player({
