--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 <body>
   <main>
     <header>
-      <a href="/"><img alt="logo" class="logo" src="assets/logo.png"></a>
+      <a href="/"><img alt="logo" class="logo" src="assets/images/kjch.png"></a>
       <span>ZDSchool</span>
     </header>
-    <section id="first" bp="grid vertical-center" style="background-image: url(./assets/backgrounds/2.jpg);">
+    <section id="first" bp="grid vertical-center" style="background-image: url(./assets/backgrounds/bg.png);">
       <div bp="12">
-        <img alt="logo" class="shake-slow logo" src="assets/logo.png">
+        <img alt="logo" class="shake-slow logo" src="assets/images/kjch.png">
         <h1>ZDSchool</h1>
         <h3>2022届毕业生建造的忠德学校</h3>
         <p>（肝劲十足）</p>
@@ -73,15 +73,18 @@
       </section>
       <h1>更多图片</h1>
       <div class="more-img">
-        <img src="https://file.kjchmc.cn/Minecraft/school/忠德资料/截图/1.jpg">
-        <img src="https://file.kjchmc.cn/Minecraft/school/忠德资料/截图/2.jpg">
-        <img src="https://file.kjchmc.cn/Minecraft/school/忠德资料/截图/3.jpg">
-        <img src="https://file.kjchmc.cn/Minecraft/school/忠德资料/截图/4.jpg">
-        <img src="https://file.kjchmc.cn/Minecraft/school/忠德资料/截图/5.jpg">
-        <img src="https://file.kjchmc.cn/Minecraft/school/忠德资料/截图/6.jpg">
-        <img src="https://file.kjchmc.cn/Minecraft/school/忠德资料/截图/7.jpg">
-        <img src="https://file.kjchmc.cn/Minecraft/school/忠德资料/截图/8.jpg">
-        <img src="https://file.kjchmc.cn/Minecraft/school/忠德资料/截图/9.jpg">
+        <img src="./assets/images/1.png" />
+        <img src="./assets/images/2.png" />
+        <img src="./assets/images/3.png" />
+        <img src="./assets/images/4.png" />
+        <img src="./assets/images/5.png" />
+        <img src="./assets/images/6.png" />
+        <img src="./assets/images/7.png" />
+        <img src="./assets/images/8.png" />
+        <img src="./assets/images/9.png" />
+        <img src="./assets/images/10.png" />
+        <img src="./assets/images/11.png" />
+        <img src="./assets/images/12.png" />
       </div>
       <!--<iframe src="./imglist.html" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>-->
       <!--<section id="more">
