--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
   <main>
     <header>
-      <a href="/"><img alt="logo" class="logo" src="assets/images/work.png"></a>
+      <a href="/"><img alt="logo" class="logo" src="assets/images/table.png"></a>
       <span>ZDSchool</span>
     </header>
     <section id="first" bp="grid vertical-center" style="background-image: url(./assets/backgrounds/bg.png);">
