--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="description" content="2022届毕业忠德Minecraft地图网站">
-  <meta name="keywords" content="NekoCraft,nekocraft,MincraftServer,服务器,我的世界服务器,我的世界,Minecraft,MC,公益服务器,正版服务器">
+  <meta name="keywords" content="忠德,北京忠德学校,北京市忠德学校,kjch,况佳城,kjch况佳城,Minecraft">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="renderer" content="webkit">
   <meta http-equiv="Cache-Control" content="no-siteapp" />
   <meta name="theme-color" content="#181818">
-  <title data-t="indexTitle">忠德学校 | 几个22届毕业生的作品</title>
+  <title data-t="indexTitle">忠德学校 | 几个22届初三毕业生的作品</title>
   <link rel="icon" rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico">
   <meta name="mobile-web-app-capable" content="yes">
   <link rel="icon" sizes="192x192" href="assets/logo.png">
@@ -36,7 +36,7 @@
       <div bp="12">
         <img alt="logo" class="shake-slow logo" src="assets/images/kjch.png">
         <h1>ZDSchool</h1>
-        <h3>2022届毕业生建造的忠德学校</h3>
+        <h3>2022届初三毕业生建造的忠德学校</h3>
         <p>（肝劲十足）</p>
         <p></p>
         <div class="buttons">
@@ -145,7 +145,7 @@
       </div>
       <h1>联系我</h1>
       <ul>
-        <li>微信: kjch666FFF</li>
+        <span class="sprite item-sprite" style="background-image:url(https://static.wikia.nocookie.net/minecraft_zh_gamepedia/images/f/f5/ItemCSS.png/revision/latest?cb=20220705134026&amp;format=original);background-position:-80px -32px;"></span><li>微信: kjch666FFF</li>
         <li>QQ: <a href="https://wpa.qq.com/msgrd?v=3&uin=1834423612&site=qqq&menu=yes" target="_blank">1834423612</a></li>
         <li><a href="https://www.kjchmc.cn/" target="_blank">kjch况佳城的主页</a></li>
         <li><a href="https://file.kjchmc.cn/" target="_blank">老况的文件库</a></li>
@@ -156,7 +156,7 @@
       <a href="http://www.beian.miit.gov.cn" target="_blank">冀ICP备19023170号</a>
       <a target="_blank" rel="noopener external nofollow noreferrer" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=11011202001885">
         <span class="icp" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;">
-          <img src="http://www.beian.gov.cn/img/ghs.png" style="float:left;"/>京公网安备11011202001885号</span></a>
+          <img src="./assets/images/ghs.png" style="float:left;"/>京公网安备11011202001885号</span></a>
       <span class="copy">Copyright &copy; 2022 kjch况佳城 All rights reserved.</span>
     </footer>
   </main>
