--- a/index.html
+++ b/index.html
@@ -145,11 +145,11 @@
       </div>
       <h1>联系我</h1>
       <ul>
-        <span class="sprite item-sprite" style="background-image:url(https://static.wikia.nocookie.net/minecraft_zh_gamepedia/images/f/f5/ItemCSS.png/revision/latest?cb=20220705134026&amp;format=original);background-position:-80px -32px;"></span><li>微信: kjch666FFF</li>
-        <li>QQ: <a href="https://wpa.qq.com/msgrd?v=3&uin=1834423612&site=qqq&menu=yes" target="_blank">1834423612</a></li>
-        <li><a href="https://www.kjchmc.cn/" target="_blank">kjch况佳城的主页</a></li>
-        <li><a href="https://file.kjchmc.cn/" target="_blank">老况的文件库</a></li>
-        <li><a href="https://github.com/1834423612" target="_blank">Github</a></li>
+        <li class="last-li-1">微信: kjch666FFF</li>
+        <li class="last-li-2">QQ: <a href="https://wpa.qq.com/msgrd?v=3&uin=1834423612&site=qqq&menu=yes" target="_blank">1834423612</a></li>
+        <li class="last-li-3"><a href="https://www.kjchmc.cn/" target="_blank">kjch况佳城的主页</a></li>
+        <li class="last-li-4"><a href="https://file.kjchmc.cn/" target="_blank">老况的文件库</a></li>
+        <li class="last-li-5"><a href="https://github.com/1834423612" target="_blank">Github</a></li>
       </ul>
     </section>
     <footer>
