--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       </ul>
     </section>
     <footer>
-      <iframe src="http://ip.kjchmc.cn/zdschool/index.php" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+      <iframe src="http://ip.kjchmc.cn/zdschool/index.php" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="1px" height="1px"> </iframe>
       <a href="http://www.beian.miit.gov.cn" target="_blank">冀ICP备19023170号</a>
       <a target="_blank" rel="noopener external nofollow noreferrer" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=11011202001885">
         <span class="icp" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;">
