--- a/index.html
+++ b/index.html
@@ -139,6 +139,11 @@
           <p>woshidas**bi</p>
         </section>
         <section>
+          <img class="img" src="/assets/members/putput11.png">
+          <h3>吴中瑞</h3>
+          <p>putput11</p>
+        </section>
+        <section>
           <img class="img" src="/assets/members/test.png">
           <h3>老况的摄像机</h3>
           <p>test</p>
