增加提示框 修复已知BUG

--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
   </template>-->
   
   <script>
+    import { Message } from 'element-ui';
     export default {
       methods: {
         open1() {
