--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <link type="text/css" rel="stylesheet" href="/css/scrollbar.css" />
   <link type="text/css" rel="styleSheet" href="css/main.less" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/fontawesome.min.css" integrity="sha384-zIaWifL2YFF1qaDiAo0JFgsmasocJ/rqu7LKYH8CoBEXqGbb9eO+Xi3s6fQhgFWM" crossorigin="anonymous">
+  <script src="https://www.unpkg.com/vue@3.2.41/dist/vue.global.js"></script>
   <!-- 引入 Element 样式 -->
   <link rel="stylesheet" href="https://unpkg.com/element-ui@2.15.10/lib/theme-chalk/index.css">
   <!-- 引入 Element 组件库 -->
@@ -199,25 +200,7 @@
   </template>-->
   
   <script>
-    import Vue from 'vue'
-    import {
-      Button,
-      Form,
-      FormItem,
-      Message,
-      MessageBox
-    } from 'element-ui'
-
-    Vue.use(Button)
-    Vue.use(Form)
-    Vue.use(FormItem)
-
-    // 将Mesage挂载到vue原型对象上
-    Vue.prototype.$message = Message
-
-    // 将MessageBox挂载到vue原型对象上
-    Vue.prototype.$confirm = MessageBox.confirm
-
+    import { Message } from 'element-ui';
     export default {
       methods: {
         open1() {
