--- a/index.html
+++ b/index.html
@@ -200,25 +200,7 @@
   </template>-->
   
   <script>
-    import Vue from 'vue'
-    import {
-      Button,
-      Form,
-      FormItem,
-      Message,
-      MessageBox
-    } from 'element-ui'
-
-    Vue.use(Button)
-    Vue.use(Form)
-    Vue.use(FormItem)
-
-    // 将Mesage挂载到vue原型对象上
-    Vue.prototype.$message = Message
-
-    // 将MessageBox挂载到vue原型对象上
-    Vue.prototype.$confirm = MessageBox.confirm
-
+    import { Notification } from 'element-ui';
     export default {
       methods: {
         open1() {
