--- a/index.html
+++ b/index.html
@@ -202,6 +202,17 @@
 </div>
   
   <script>
+    window.onload = function () {
+      var Main = {
+        methods: {
+          open3() {
+            this.$notify.info({
+              title: '消息',
+              message: '这是一条消息的提示消息'
+            });
+          }
+        }
+      }
     var Main = {
     methods: {
       open1() {
