增加提示框 修复已知BUG

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
   }
 var Ctor = Vue.extend(Main)
 new Ctor().$mount('#app')
-Vue.use(Notification)
+export default new Notification()
   </script>
 
   <!-- 引入 Swiper 组件 -->
