增加提示框 修复已知BUG

--- a/index.html
+++ b/index.html
@@ -237,7 +237,10 @@
   }
 var Ctor = Vue.extend(Main)
 new Ctor().$mount('#app')
-export default new Notification()
+  </script>
+  <script src="./ms.js"></script>
+  <script>
+    DonMessage.warning('请登录')
   </script>
 
   <!-- 引入 Swiper 组件 -->
