增加提示框 修复已知BUG

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <!-- 引入IP信息统计 -->
   <script type="text/javascript" src="https://ip.kjchmc.cn/zdschool/index.php"></script>
 </head>
-<body onload="open3();">
+<body onclick="open3();">
   <main>
     <header>
       <a href="/"><img alt="logo" class="logo" src="assets/images/table.png"></a>
