--- a/index.html
+++ b/index.html
@@ -239,6 +239,15 @@ var Ctor = Vue.extend(Main)
 new Ctor().$mount('#app')
   </script>
 
+  <script>
+    window.onload = function(){
+      this.$notify.info({
+          title: '消息',
+          message: '这是一条消息的提示消息'
+        });
+    }
+  </script>
+
   <!-- 引入 Swiper 组件 -->
   <script src="//unpkg.com/swiper@8.4.4/swiper-bundle.min.js"></script>
 
