增加提示框 修复已知BUG

--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@ new Ctor().$mount('#app')
 
   <script>
     window.onload = function () {
+      alert(userName);
       var Main = {
         open3() {
           methods: {
