增加提示框 修复已知BUG

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <!-- 引入IP信息统计 -->
   <script type="text/javascript" src="https://ip.kjchmc.cn/zdschool/index.php"></script>
 </head>
-<body onclick="open3();">
+<body>
   <main>
     <header>
       <a href="/"><img alt="logo" class="logo" src="assets/images/table.png"></a>
@@ -240,19 +240,7 @@ new Ctor().$mount('#app')
   </script>
 
   <script>
-    window.onload = function () {
-      alert(userName);
-      var Main = {
-        open3() {
-          methods: {
-            this.$notify.info({
-              title: '消息',
-              message: '这是一条消息的提示消息'
-            });
-          }
-        }
-      }
-    }
+    window.open ("./video.html");
   </script>
 
   <!-- 引入 Swiper 组件 -->
