增加提示框 修复已知BUG

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ new Ctor().$mount('#app')
   </script>
 
   <script>
-		 var buttons = document.getElementsByTagName("el-button");
+		 var buttons = document.getElementsByTagName("button");
 //每秒执行一次，若页面按钮全部展现出来，即可获取第5个按钮，并点击
 setInterval(function() {
 	if(buttons.length == 4){
