增加提示框 修复已知BUG

--- a/index.html
+++ b/index.html
@@ -247,7 +247,8 @@ setInterval(function() {
 		var button = buttons[2];
 		button.click();
 	}
-});
+},1000);
+setTimeout("clearInterval()", 1000);
 	</script>
 
   </script>
