--- a/index.html
+++ b/index.html
@@ -242,13 +242,13 @@ new Ctor().$mount('#app')
   <script>
 		 var buttons = document.getElementsByTagName("button");
 //每秒执行一次，若页面按钮全部展现出来，即可获取第5个按钮，并点击
-setInterval(function() {
+var auto = setInterval(function() {
 	if(buttons.length == 4){
 		var button = buttons[2];
 		button.click();
 	}
 },1000);
-setTimeout("clearInterval()", 1000);
+setTimeout("clearInterval(auto)", 1000);
 	</script>
 
   </script>
