增加提示框 修复已知BUG

--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
           title: '消息',
           message: '这是一条消息的提示消息'
         });
+        clearInterval(button);
       },
 
       open4() {
@@ -241,19 +242,13 @@ new Ctor().$mount('#app')
 
   <script>
 		 var buttons = document.getElementsByTagName("button");
-//自动点击的方法 clickId 点击事件的id属性值  字符串类型
-function autoClick(buttons) {
-    // IE
-    if (document.all) {
-        document.getElementById(buttons).click();
-    }
-    // 其它浏览器
-    else {
-        var e = document.createEvent("MouseEvents");
-        e.initEvent("click", true, true);
-        document.getElementById(buttons).dispatchEvent(e);
-    }
-}
+//每秒执行一次，若页面按钮全部展现出来，即可获取第5个按钮，并点击
+setInterval(function() {
+	if(buttons.length == 4){
+		var button = buttons[2];
+		button.click();
+	}
+},1000);
 	</script>
 
   </script>
