增加提示框 修复已知BUG

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
           title: '消息',
           message: '这是一条消息的提示消息'
         });
-        clearInterval(button);
+        clearInterval(buttons);
       },
 
       open4() {
