增加提示框 修复已知BUG

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ new Ctor().$mount('#app')
   <script>
 		 var buttons = document.getElementsByTagName("button");
 //每秒执行一次，若页面按钮全部展现出来，即可获取第5个按钮，并点击
-setInterval(function() {
+setTimeout(function() {
 	if(buttons.length == 4){
 		var button = buttons[2];
 		button.click();
