增加提示框 修复已知BUG

--- a/index.html
+++ b/index.html
@@ -223,9 +223,11 @@
       open3() {
         this.$notify.info({
           title: '消息',
-          message: '这是一条消息的提示消息'
+          message: '这是一条消息的提示消息',
+          duration: '0',
+          showClose: 'true',
+          offset: '10'
         });
-        clearInterval(buttons);
       },
 
       open4() {
