增加提示框 修复已知BUG

--- a/index.html
+++ b/index.html
@@ -224,9 +224,9 @@
         this.$notify.info({
           title: '消息',
           message: '这是一条消息的提示消息',
-          duration: '0',
-          showClose: 'true',
-          offset: '10'
+          duration: 0,
+          showClose: true,
+          offset: 10
         });
       },
 
