--- a/index.html
+++ b/index.html
@@ -176,30 +176,22 @@
   </main>
 
   <!-- 添加首页消息弹窗 -->
-  <!--<div id="app">
+  <div id="app">
   <template>
-    <el-button
-      plain
-      @click="open1">
+    <el-button plain @click="open1">
       成功
     </el-button>
-    <el-button
-      plain
-      @click="open2">
+    <el-button plain @click="open2">
       警告
     </el-button>
-    <el-button
-      plain
-      @click="open3">
+    <el-button plain @click="open3" style="display: none;">
       消息
     </el-button>
-    <el-button
-      plain
-      @click="open4">
+    <el-button plain @click="open4">
       错误
     </el-button>
   </template>
-</div>-->
+</div>
   
   <script>
     var Main = {
