增加提示框 修复已知BUG

--- a/index.html
+++ b/index.html
@@ -178,16 +178,16 @@
   <!-- 添加首页消息弹窗 -->
   <div id="app">
   <template>
-    <el-button plain @click="open1">
+    <el-button plain @click="open1" style="display: none;">
       成功
     </el-button>
-    <el-button plain @click="open2">
+    <el-button plain @click="open2" style="display: none;">
       警告
     </el-button>
     <el-button plain @click="open3" style="display: none;">
       消息
     </el-button>
-    <el-button plain @click="open4">
+    <el-button plain @click="open4" style="display: none;">
       错误
     </el-button>
   </template>
