--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <link type="text/css" rel="styleSheet" href="css/main.less" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/fontawesome.min.css" integrity="sha384-zIaWifL2YFF1qaDiAo0JFgsmasocJ/rqu7LKYH8CoBEXqGbb9eO+Xi3s6fQhgFWM" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <link rel="stylesheet" href="https://www.minecraft.net/etc.clientlibs/minecraft/clientlibs/headerclientLibNew.33f62d5b30557ab9c48cf8860c25d242.css" />
   <!-- 引入 Element 样式 -->
   <link rel="stylesheet" href="https://unpkg.com/element-ui@2.15.10/lib/theme-chalk/index.css">
   <!-- 引入 Element 组件库 -->
@@ -39,6 +40,9 @@
     <header>
       <a href="/"><img alt="logo" class="logo" src="assets/images/table.png"></a>
       <span>ZDSchool</span>
+      <li class="mc-globalhead__btnlist-container" data-bi-id="c2c3c2m2r1a1" data-bi-name="c2c3c2m2r1a1">
+        <a class="mc-button__primary mc-button__green-s1" href="/get-minecraft" aria-label="获取 Minecraft" data-aem-contentname="获取 Minecraft" target="_self" data-bi-id="n1c2c3c2m2r1a1" data-bi-name="获取 Minecraft">获取 Minecraft</a>
+      </li>
     </header>
     <section id="first" bp="grid vertical-center" style="background-image: url(./assets/backgrounds/bg.png);">
       <div bp="12">
@@ -179,16 +183,16 @@
   <div id="app">
   <template>
     <el-button plain @click="open1" style="display: none;">
-      成功
+      Button1
     </el-button>
     <el-button plain @click="open2" style="display: none;">
-      警告
+      Button2
     </el-button>
     <el-button plain @click="open3" style="display: none;">
       消息
     </el-button>
     <el-button plain @click="open4" style="display: none;">
-      错误
+      Button4
     </el-button>
   </template>
 </div>
